--- a/src/pages/WorkoutPlanner.module.css
+++ b/src/pages/WorkoutPlanner.module.css
@@ -58,11 +58,7 @@
 }
 
 .categorySelector {
-  width: calc(100% + 3rem);
-  margin-left: -1.5rem;
-  margin-right: -1.5rem;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  width: 100%;
   overflow: hidden;
 }
 
